@@ -1,6 +1,7 @@
 cm4all-myproxy (0.26) unstable; urgency=low
 
   * allow intercepting INIT_DB packets
+  * systemd: do not restart on configuration errors
   * debian: start daemon during initial installation, stop on uninstall
 
  --   
